--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "efe",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": {
     "name": "Futago-za Ryuu",
     "email": "futagoza.ryuu@gmail.com",
@@ -24,6 +24,7 @@
   "dependencies": {
     "fs-extra": "0.17.0",
     "chokidar": "1.0.0-rc4",
-    "glob": "5.0.3"
+    "glob": "5.0.3",
+    "walker": "1.0.6"
   }
 }
