--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
   
   "main": "index.js",
   "dependencies": {
-    "fs-extra": "0.17.0",
-    "chokidar": "1.0.0-rc4",
-    "glob": "5.0.3",
+    "fs-extra": "0.18.2",
+    "chokidar": "1.0.1",
+    "glob": "5.0.5",
     "walker": "1.0.6",
     "filesize": "3.1.2"
   }
