--- a/package.json
+++ b/package.json
@@ -21,11 +21,21 @@
   },
   
   "main": "index.js",
+  "scripts": {
+    "prepublish": "npm test",
+    "test": "node node_modules/mocha/bin/mocha",
+    "docs": "node node_modules/jsdoc/jsdoc.js -c jsdoc.json"
+  },
   "dependencies": {
-    "fs-extra": "0.20.0",
+    "fs-extra": "0.20.1",
     "chokidar": "1.0.3",
     "glob": "5.0.10",
     "walker": "1.0.7",
     "filesize": "3.1.2"
+  },
+  "devDependencies": {
+    "mock-fs": "2.7.1",
+    "mocha": "2.2.5",
+    "jsdoc": "3.3.2"
   }
 }
