tests: changed method of running mocha
  - changed scripts to run `node test`, which runs `test/index.js`
  - removed `mocha.opts`, not needed anymore
  - added `test/index.js`, initially based on 'fx-extra/test.js'

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   
   "main": "index.js",
   "scripts": {
-    "prepublish": "npm test",
-    "test": "node node_modules/mocha/bin/mocha"
+    "prepublish": "node test",
+    "test": "node test"
   },
   "dependencies": {
     "fs-extra": "0.20.1",
